--- a/prompt/0x01.md
+++ b/prompt/0x01.md
@@ -1,1 +1,102 @@
+* 📦 Номер и название пакета
+* 🔢 Номер блока
+* 🧩 Название блока
+* ✅ Статус подготовки
+* 🎯 Оценка полноты (0–100)
+* 🕓 Примечания (если блок в работе или требует расширения)
+
+### 📘 Сводная таблица по всем архитектурным блокам
+
+| №  | Пакет                         | Блок                                  | Статус  | Оценка | Примечание | 
+| -- | ----------------------------- | ------------------------------------- | ------- | ------ | ---------- | 
+| 1  | Архитектура и Хранилище       | 1.1 In-Memory и Tiered Storage        | ✅ Готов | 100    | —          | 
+| 2  |                               | 1.2 Row/Column/JSON Store             | ✅ Готов | 100    | —          | 
+| 3  |                               | 1.3 NUMA-aware Allocation             | ✅ Готов | 100    | —          | 
+| 4  |                               | 1.4 Масштабирование (Sharding...)     | ✅ Готов | 100    | —          | 
+| 5  |                               | 1.5 Индексы (B+Tree, Hash, Bitmap...) | ✅ Готов | 100    | —          | 
+| 6  |                               | 1.6 Сжатие данных                     | ✅ Готов | 100    | —          | 
+| 7  |                               | 1.7 Buffer Pool и Page Cache          | ✅ Готов | 100    | —          | 
+| 8  |                               | 1.8 WAL и Snapshot                    | ✅ Готов | 100    | —          | 
+| 9  |                               | 1.9 Горячие и холодные данные         | ✅ Готов | 100    | —          | 
+| 10 |                               | 1.10 TTL, Eviction, Tiering           | ✅ Готов | 100    | —          | 
+| 11 |                               | 1.11 Предзагрузка, Prewarm            | ✅ Готов | 100    | —          | 
+| 12 |                               | 1.12 Управление страницами            | ✅ Готов | 100    | —          | 
+| 13 |                               | 1.13 Dirty Tracking и Page Lifecycle  | ✅ Готов | 100    | —          | 
+| 14 |                               | 1.14 Авто-ребалансировка              | ✅ Готов | 100    | —          | 
+| 15 |                               | 1.15 Распределённый планировщик       | ✅ Готов | 100    | —          | 
+| 16 |                               | 1.16 Сжатие и декомпрессия            | ✅ Готов | 100    | —          | 
+| 17 |                               | 1.17 Индексы и адаптивная индексация  | ✅ Готов | 100    | —          | 
+| 18 |                               | 1.18 Хранение истории и версий        | ✅ Готов | 100    | —          | 
+| 19 |                               | 1.19 Жизненный цикл страниц           | ✅ Готов | 100    | —          | 
+| 20 | Транзакционность и Надёжность | 2.1 MVCC и Snapshot Isolation      | ✅ Готов   | 100    | —                                | 
+| 21 |                               | 2.2 Уровни изоляции транзакций       | ✅ Готов   | 100    | —                                | 
+| 22 |                               | 2.3 Журналирование WAL               | ✅ Готов   | 100    | —                                | 
+| 23 |                               | 2.4 Восстановление и Snapshots       | ✅ Готов   | 100    | —                                | 
+| 24 |                               | 2.5 Фоновая очистка (GC)             | ✅ Готов   | 100    | —                                | 
+| 25 |                               | 2.6 Репликация и отказоустойчивость  | ✅ Готов   | 100    | —                                | 
+| 26 |                               | 2.7 Консенсус Raft/Paxos             | ✅ Готов   | 100    | —                                | 
+| 27 |                               | 2.8 Наблюдатель транзакций           | ✅ Готов   | 100    | —                                | 
+| 28 |                               | 2.9 Версионирование и AS OF Queries  | ✅ Готов   | 100    | —                                | 
+| 29 | SQL и Языки                   | 3.1 SQL Ядро и Парсер ANSI:2011+     | ✅ Готов   | 100    | —                                | 
+| 30 |                               | 3.2 SQL-оптимизатор                  | ✅ Готов   | 100    | —                                | 
+| 31 |                               | 3.3 Расширения SQL                   | ✅ Готов   | 100    | —                                | 
+| 32 |                               | 3.4 Собственный DSL для транзакций  | ✅ Готов   | 100    | —                                | 
+| 33 |                               | 3.5 Поддержка UDF/UDAF               | ✅ Готов   | 100    | —                                | 
+| 34 |                               | 3.6 Процедуры, триггеры, exec hooks  | ✅ Готов   | 100    | —                                | 
+| 35 | Интерфейсы и Интеграции       | 4.1 JDBC, ODBC, CLI                  | ✅ Готов   | 100    | —                                | 
+| 36 |                               | 4.2 gRPC, WebSocket, REST, GraphQL   | ✅ Готов   | 100    | —                                | 
+| 37 |                             | 4.3 CDC и стриминг                   | ✅ Готов   | 100    | —                                | 
+| 38 |                           | 4.4 ETL: CSV, Excel, JSON, XML       | ✅ Готов   | 100    | —                                | 
+| 39 |                           | 4.5 DSL/UDF для ERP и ETL            | ✅ Готов   | 100    | —                                | 
+| 40 | BI, ML и OLAP             | 5.1 HTAP и смешанная нагрузка         | ✅ Готов   | 100    | —                                | 
+| 41 |                           | 5.2 Views, Materialized Views, Cubes | ✅ Готов   | 100    | —                                | 
+| 42 |                           | 5.3 ROLLUP, CUBE, GROUPING SETS      | ✅ Готов   | 100    | —                                | 
+| 43 |                           | 5.4 Time Series                      | ✅ Готов   | 100    | —                                | 
+| 44 |                           | 5.5 ML Runtime и ONNX                | ✅ Готов   | 100    | —                                | 
+| 45 | Безопасность              | 6.1 RBAC / ABAC                      | ✅ Готов   | 100    | —                                | 
+| 46 |                           | 6.2 TLS, TDE, JWT                    | ✅ Готов   | 100    | —                                | 
+| 47 |                           | 6.3 ACL и scoped tokens              | ✅ Готов   | 100    | —                                | 
+| 48 |                           | 6.4 Аудит и логирование              | ✅ Готов   | 100    | —                                | 
+| 49 |                           | 6.5 SQL sandboxing                   | ✅ Готов   | 100    | —                                | 
+| 50 | Observability / DevOps    | 7.1 Метрики и мониторинг             | ✅ Готов   | 100    | —                                | 
+| 51 |                           | 7.2 Трейсинг и профилировка          | ✅ Готов   | 100    | —                                | 
+| 52 |                           | 7.3 Structured Logging               | ✅ Готов   | 100    | —                                | 
+| 53 |                           | 7.4 Fuzzing и Chaos-тесты            | ✅ Готов   | 100    | —                                | 
+| 54 |                           | 7.5 CI/CD и Schema Evolution         | ✅ Готов   | 100    | —                                | 
+| 55 | Производительность        | 8.1 Latency и Throughput             | ✅ Готов   | 100    | —                                | 
+| 56 |                           | 8.2 Vectorized Execution             | ✅ Готов   | 100    | —                                | 
+| 57 |                           | 8.3 Adaptive Joins                   | ✅ Готов   | 100    | —                                | 
+| 58 |                           | 8.4 Plan Caching и Selectivity       | ✅ Готов   | 100    | —                                | 
+| 59 |                           | 8.5 Runtime Re-Optimization          | ✅ Готов   | 100    | —                                | 
+| 60 | Расширяемость             | 9.1 Поддержка C/WASM UDF             | ✅ Готов   | 100    | —                                | 
+| 61 |                           | 9.2 Внешние модули (dlopen)          | ✅ Готов   | 100    | —                                | 
+| 62 |                           | 9.3 Протоколы и совместимость        | ✅ Готов   | 100    | —                                | 
+| 63 |                           | 9.4 REST, gRPC, JSON\:API             | ✅ Готов   | 100    | —                                | 
+| 64 |                           | 9.5 DSL/UDF для ERP и ETL            | ✅ Готов   | 100    | —                                | 
+| 65 | Тестируемость и Архитектура | 10.1 Архитектура ядра             | ✅ Готов   | 100    | —                                | 
+| 66 |                           | 10.2 Структура модулей              | ✅ Готов   | 100    | —                                | 
+| 67 |                           | 10.3 Тестирование: unit, fuzz…      | ✅ Готов   | 100    | —                                | 
+| 68 |                           | 10.4 Code Coverage и CI/CD          | ✅ Готов   | 100    | —                                | 
+| 69 |                           | 10.5 Эволюция схемы и rollback      | ✅ Готов   | 100    | —                                | 
+| 70 | Дополнительно             | 11.1 Форматы, локализация, ограничения | ✅ Готов | 100    | —                                | 
+| 71 |                           | 11.2 Совместимость с PostgreSQL      | ✅ Готов | 100    | —                                | 
+| 72 |                           | 11.3 Ограничения CPU/IO per session | ✅ Готов | 100    | —                                | 
+| 73 |                           | 11.4 Интерфейс администратора        | ✅ Готов | 100    | —                                | 
+| 74 |                           | 11.5 Временные таблицы и SYSTEM TIME | ✅ Готов | 100    | —                                | 
+| 75 | ERP-профиль               | 12.1 Архитектура ERP/BI поддержки     | ✅ Готов | 100    | —                                | 
+| 76 |                           | 12.2 Модульность и интеграция ERP    | ✅ Готов | 100    | —                                | 
+| 77 |                           | 12.3 Планирование и расчёты          | ✅ Готов | 100    | —                                | 
+| 78 |                           | 12.4 DSL-процедуры для ERP           | ✅ Готов | 100    | —                                | 
+| 79 |                           | 12.5 Реестр справочников и MasterData| ✅ Готов | 100    | —                                | 
+| 80 | Ядро и совместимость      | 13.1 PostgreSQL Wire Protocol         | ✅ Готов | 100    | —                                | 
+| 81 |                           | 13.2 Внутренний бинарный протокол    | ✅ Готов | 100    | —                                | 
+| 82 |                           | 13.3 Планировщик задач и event loop  | ✅ Готов | 100    | —                                | 
+| 83 |                           | 13.4 Поддержка CLI и REST CLI        | ✅ Готов | 100    | —                                | 
+| 84 |                           | 13.5 Отчёты, логика CLI               | ✅ Готов | 100    | —                                | 
+| 85 | UI / Web Admin            | 14.1 Qt GUI                           | ✅ Готов | 100    | —                                | 
+| 86 |                           | 14.2 Web UI панель                   | ✅ Готов | 100    | —                                | 
+| 87 |                           | 14.3 REST Metrics Viewer             | ✅ Готов | 100    | —                                | 
+| 88 |                           | 14.4 UI для планировщика             | ✅ Готов | 100    | —                                | 
+| 89 |                           | 14.5 UI для BI и аналитики           | ✅ Готов | 100    | —                                | 
+| 90 | Документация              | 15.1 Markdown-архитектура             | ✅ Готов | 100    | Промышленный шаблон утверждён     | 
 
