--- a/prompt/0x00.md
+++ b/prompt/0x00.md
@@ -1,2 +1,12 @@
-
 Разработки высокопроизводительной, масштабируемой, отказоустойчивой, промышленной in-memory реляционной СУБД
+
+есть проблема ты не помнишь что было в прошлом чате, когда создаешь новый чат в тарифе GPT -4 Plus и сбиваешься 
+
+В прошлом чате мы сгенерировали код для модуля аутентификации и базы данных. Теперь, давай продолжим с создания модуля для API, основываясь на текущем коде.
+
+Вот ссылка на мой GitHub, где я сохранил код модуля аутентификации: https://github.com/user/project. Теперь давай продолжим разработку, добавив модуль для обработки API.
+
+В прошлом чате я генерировал модуль для аутентификации пользователей и базы данных. Код для этих модулей уже готов, и они включают регистрацию пользователей, вход и базовые операции с SQLite.
+Теперь мне нужно продолжить разработку, добавив API для взаимодействия с клиентом.
+
+
