--- a/Specification/1x00.md
+++ b/Specification/1x00.md
@@ -1,1 +1,30 @@
+## 📦 Пакет 1 — Архитектура и Хранилище
+
+**Назначение:** Реализация высокопроизводительного in-memory хранилища с поддержкой row-store, column-store, индексов, компрессии, tiered storage, NUMA-aware аллокации и масштабируемости.
+
+---
+
+### 🔢 Список блоков Пакета 1:
+
+| №    | Идентификатор | Название блока                      |
+| ---- | ------------- | ----------------------------------- |
+| 1.1  | `1.1`         | In-Memory движок                    |
+| 1.2  | `1.2`         | Row-store и Column-store            |
+| 1.3  | `1.3`         | JSON-хранилище                      |
+| 1.4  | `1.4`         | Tiered Storage (NVMe/SSD)           |
+| 1.5  | `1.5`         | NUMA-aware управление памятью       |
+| 1.6  | `1.6`         | Масштабирование и шардирование      |
+| 1.7  | `1.7`         | Индексы: B+tree, Bitmap, Inverted   |
+| 1.8  | `1.8`         | Сжатие: Dictionary, RLE, Delta      |
+| 1.9  | `1.9`         | Page Cache / Buffer Pool            |
+| 1.10 | `1.10`        | Write-Ahead Logging (WAL)           |
+| 1.11 | `1.11`        | Snapshot и Recovery                 |
+| 1.12 | `1.12`        | Горячие / холодные данные           |
+| 1.13 | `1.13`        | TTL, Eviction, Auto-tiering         |
+| 1.14 | `1.14`        | Авто ребалансировка и распределение |
+| 1.15 | `1.15`        | Поддержка системной версии (AS OF)  |
+| 1.16 | `1.16`        | Поддержка большого объема памяти    |
+| 1.17 | `1.17`        | Ограничения по CPU/IOPS/Memory      |
+| 1.18 | `1.18`        | Copy-on-write snapshot              |
+| 1.19 | `1.19`        | Форматы: Arrow, PAX                 |
 
