--- a/Specification/1x02.md
+++ b/Specification/1x02.md
@@ -1,1 +1,150 @@
+# 📂 Блок 1.2 — Row-store и Column-store
 
+---
+
+## 🆔 Идентификатор блока
+
+| Категория | Значение                       |
+| --------- | ------------------------------ |
+| 📦 Пакет  | 1 — Архитектура и Хранилище    |
+| 🔢 Блок   | 1.2 — Row-store и Column-store |
+
+---
+
+## 🎯 Назначение
+
+Блок отвечает за **физическую организацию хранения строк и колонок** в оперативной памяти.
+Обеспечивает:
+
+* **Row-store** для быстрых OLTP-вставок, обновлений и точечных SELECT,
+* **Column-store** для высокоэффективных OLAP-операций: scan, group-by, агрегатов,
+* **Гибридное представление**, переключаемое на уровне таблицы или даже партиции.
+
+---
+
+## ⚙️ Функциональность
+
+| Подсистема   | Реализация / особенности                                               |
+| ------------ | ---------------------------------------------------------------------- |
+| Row-store    | Array-of-structures (AOS), быстрые вставки, MVCC-совместимость         |
+| Column-store | Structure-of-arrays (SOA), dictionary/RLE/delta сжатие, SIMD-агрегации |
+| Гибрид       | Возможность раздельного хранения (на таблицу/шард/колонку)             |
+| Адаптивность | Переход между режимами по статистике (write/read ratio)                |
+| Типизация    | Общий layout для INT, FLOAT, STRING, TIMESTAMP, JSON                   |
+
+---
+
+## 🔧 Основные функции на C
+
+| Имя функции            | Прототип                                               | Назначение                           |
+| ---------------------- | ------------------------------------------------------ | ------------------------------------ |
+| `table_create()`       | `table_t *table_create(schema_t *, store_mode_t)`      | Создание таблицы с row/column layout |
+| `table_insert()`       | `bool table_insert(table_t *, const row_t *)`          | Вставка строки                       |
+| `table_scan()`         | `bool table_scan(table_t *, scan_cb_t cb, void *ctx)`  | Сканирование по таблице              |
+| `row_store_fetch()`    | `row_t *row_store_fetch(row_store_t *, rowid_t)`       | Получение строки                     |
+| `column_store_fetch()` | `row_t *column_store_fetch(column_store_t *, rowid_t)` | Реконструкция строки из колонок      |
+
+---
+
+## 📊 Метрики
+
+| Метрика                       | Источник          | Цель                     |
+| ----------------------------- | ----------------- | ------------------------ |
+| `row_insert_latency_ns`       | row\_store insert | < 250 нс                 |
+| `column_scan_throughput_mb_s` | full scan         | > 500 МБ/с               |
+| `write_vs_read_ratio`         | query planner     | автопереход в row/column |
+| `column_compression_ratio`    | dictionary + RLE  | > 2.5x                   |
+| `mixed_mode_support`          | system metadata   | 100%                     |
+
+---
+
+## 📂 Связанные модули кода
+
+```
+src/table.c
+src/row_store.c
+src/column_store.c
+src/compression.c
+src/schema.c
+include/table.h
+include/row_store.h
+include/column_store.h
+```
+
+---
+
+## 🧠 Особенности реализации
+
+* Каждая таблица хранит метаданные о store-режиме (`store_mode_t`)
+* В Column-store поддерживаются:
+
+  * `frame-of-reference`,
+  * `delta-encoding`,
+  * `dictionary compression`
+* Row-store используется в insert-only режимах
+* Column-store сканирует по batch → SIMD агрегаты → фильтрация
+* Store layout можно переключить с сохранением данных
+
+---
+
+## 🧪 Тестирование
+
+| Вид теста  | Методика / покрытие                                | Где расположен             |
+| ---------- | -------------------------------------------------- | -------------------------- |
+| Unit       | Create, insert, scan, compress                     | `tests/test_store.c`       |
+| Fuzz       | Повреждение row/column layout                      | `fuzz/fuzz_store_format.c` |
+| Stress     | 1 млрд записей поочерёдно в row и column           | `tests/stress/store_mix.c` |
+| Benchmarks | insert latency, scan throughput, compression ratio | `bench/column_vs_row.c`    |
+
+---
+
+## 📐 UML — Организация row / column store
+
+```plantuml
+@startuml
+entity "Table" {
+  +schema
+  +store_mode
+}
+entity "Row Store"
+entity "Column Store"
+entity "Row"
+entity "Column Chunk"
+
+Table --> Row Store : row mode
+Table --> Column Store : column mode
+Row Store --> Row
+Column Store --> Column Chunk
+@enduml
+```
+
+---
+
+## ✅ Соответствие SAP HANA+
+
+| Критерий                  | Оценка | Комментарий                           |
+| ------------------------- | ------ | ------------------------------------- |
+| Dual store (row + column) | 100    | Поддерживаются оба режима             |
+| SIMD scan + aggregation   | 95     | Векторизация в Column-store           |
+| Адаптивный выбор layout   | 90     | Поддержка автоопределения по workload |
+| Поддержка сжатия          | 95     | RLE, Dictionary, Delta                |
+
+---
+
+## 📎 Пример кода
+
+```c
+table_t *t = table_create(schema, STORE_COLUMN);
+row_t row = row_init(schema);
+row_set(&row, "amount", 123.45);
+table_insert(t, &row);
+table_scan(t, print_row, NULL);
+```
+
+---
+
+## 📌 Связь с бизнес-функциями
+
+* Позволяет комбинировать OLTP (row) и OLAP (column) в одной БД
+* Ускоряет аналитику и отчёты по большим таблицам без денормализации
+* Ключевой элемент гибридной архитектуры HTAP
